# fixmath

./: .gitignore  Fix32.sln  README.md
.github/workflows/: cmake.yml
Benchmark/: Benchmark.vcxproj  main.cpp
Example/: Example.vcxproj  main.cpp
Fix32/: Fix32.cpp  Fix32.hpp  Fix32.natvis  Fix32.vcxproj  Fix32.vcxproj.filters  Fixmath.hpp  UncheckedFix32.hpp  int128div.asm  main.cpp  uint128divmul_x64.asm
Test/: Test.vcxproj  main.cpp
include/fixmath/: fixed.hpp  fixed_impl.inl  fixmath_bitcast.inl  fixmath_clz.inl  fixmath_config.hpp  fixmath_muldiv128.inl  fixmath_softdiv128.inl  fixmath_softmul128.inl  fixmath_speedups.inl  fixmath_traits.inl
tests/: CMakeLists.txt  CMakeLists.txt.in  unit_tests.cpp
